force-app/main/default/objects/custom_create44__c/custom_create44__c.object-meta.xml
<CustomObject>
    <label>Custom created object44</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects44</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>