force-app/main/default/objects/custom_create44__c/fields/custom_create_44field564__c.field-meta.xml
<CustomField>
    <fullName>custom_create_44field564__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 44field564</label>
    <type>Checkbox</type>
</CustomField>