force-app/main/default/objects/custom_create44__c/fields/custom_create_44field619__c.field-meta.xml
<CustomField>
    <fullName>custom_create_44field619__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 44field619</label>
    <type>Checkbox</type>
</CustomField>